start product renaming SN -> mysqueezebox.com SC -> Squeezebox Server update copyright notices
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26932 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Hebrew.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Hebrew.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "SqueezeCenter";
+CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "SqueezeCenter גרסה 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Server גרסה 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "SqueezeCenter";
+NSPrefPaneIconLabel = "Squeezebox Server";
