--- a/osx/Preference Pane/Hebrew.lproj/Localizable.strings
+++ b/osx/Preference Pane/Hebrew.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "הפעלת השרת";
 "Stop Server" = "עצירת השרת";
-"Start Server Description" = "לחץ על לחצן זה להפעלת SqueezeCenter. לאחר הפעלת השרת, נגני שברשותך יוכלו לגשת לספריית המוסיקה.";
-"Stop Server Description" = "לחץ על לחצן זה לעצירת SqueezeCenter. לאחר עצירת השרת, נגני שברשותך לא יוכלו לגשת לספריית המוסיקה.";
+"Start Server Description" = "לחץ על לחצן זה להפעלת Squeezebox Server. לאחר הפעלת השרת, נגני שברשותך יוכלו לגשת לספריית המוסיקה.";
+"Stop Server Description" = "לחץ על לחצן זה לעצירת Squeezebox Server. לאחר עצירת השרת, נגני שברשותך לא יוכלו לגשת לספריית המוסיקה.";
 "Authorization Launch Error" = "לא ניתן לעדכן את הקושחה: הקובץ Update Firmware.sh חסר.";
 "Expired Authorization Error" = "לא ניתן לעדכן את הקושחה: פג תוקף ההרשאה.";
 "Firmware version" = "גרסת קושחה %@.";
 "Firmware version invalid" = "גרסת הקושחה לא חוקית.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
