--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Installatieresultaten";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter is geïnstalleerd.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter-installatie mislukt.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Je moet OS X 10.3 of hoger hebben om SqueezeCenter uit te voeren.";
+"Squeezebox Server installed successfully.\n" = "Squeezebox Server is geïnstalleerd.";
+"Squeezebox Server install failed.\n" = "Squeezebox Server-installatie mislukt.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Je moet OS X 10.3 of hoger hebben om Squeezebox Server uit te voeren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 vereist";
