--- a/osx/Preference Pane/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Spanish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Iniciar servidor";
 "Stop Server" = "Detener servidor";
-"Start Server Description" = "Haga clic en este botón para iniciar SqueezeCenter. Una vez iniciado, los reproductores podrán acceder a la biblioteca de música.";
-"Stop Server Description" = "Haga clic en este botón para detener SqueezeCenter. Una vez detenido, los reproductores no podrán acceder a la biblioteca de música.";
+"Start Server Description" = "Haga clic en este botón para iniciar Squeezebox Server. Una vez iniciado, los reproductores podrán acceder a la biblioteca de música.";
+"Stop Server Description" = "Haga clic en este botón para detener Squeezebox Server. Una vez detenido, los reproductores no podrán acceder a la biblioteca de música.";
 "Authorization Launch Error" = "Imposible actualizar firmware: falta el archivo Update Firmware.sh.";
 "Expired Authorization Error" = "Imposible actualizar firmware: la autorización ha caducado.";
 "Firmware version" = "Versión de firmware %@.";
 "Firmware version invalid" = "La versión de firmware no es válida.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
