--- a/osx/Preference Pane/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Swedish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Aktivera server";
 "Stop Server" = "Avaktivera server";
-"Start Server Description" = "Klicka på den här knappen för att aktivera SqueezeCenter. När du har gjort det får spelarna tillgång till ditt musikbibliotek.";
-"Stop Server Description" = "Klicka på den här knappen för att avaktivera SqueezeCenter. När du har gjort det har spelarna inte längre tillgång till ditt musikbibliotek.";
+"Start Server Description" = "Klicka på den här knappen för att aktivera Squeezebox Server. När du har gjort det får spelarna tillgång till ditt musikbibliotek.";
+"Stop Server Description" = "Klicka på den här knappen för att avaktivera Squeezebox Server. När du har gjort det har spelarna inte längre tillgång till ditt musikbibliotek.";
 "Authorization Launch Error" = "Det går inte att uppdatera den inbyggda programvaran eftersom filen Update Firmware.sh saknas.";
 "Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran eftersom auktoriseringen inte gäller längre.";
 "Firmware version" = "Inbyggd programvara version %@.";
 "Firmware version invalid" = "Ogiltig version av inbyggd programvara.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
