--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik op deze knop om de SqueezeCenter te starten. Nadat de  SqueezeCenter gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
-"Stop Server Description" = "Klik op deze knop om de SqueezeCenter te stoppen. Nadat de SqueezeCenter gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
+"Start Server Description" = "Klik op deze knop om de Squeezebox Server te starten. Nadat de  Squeezebox Server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
+"Stop Server Description" = "Klik op deze knop om de Squeezebox Server te stoppen. Nadat de Squeezebox Server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
 "Authorization Launch Error" = "Kan firmware niet updaten: bestand Update Firmware.sh ontbreekt.";
 "Expired Authorization Error" = "Kan firmware niet updaten: autorisatie verlopen.";
 "Firmware version" = "Firmwareversie %@.";
 "Firmware version invalid" = "Firmwareversie ongeldig.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
