--- a/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "SqueezeCenter";
+CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "SqueezeCenterin versio 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Serverin versio 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "SqueezeCenter";
+NSPrefPaneIconLabel = "Squeezebox Server";
 
