--- a/osx/Preference Pane/Installer/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Danish.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Opdater";
 "Install Results" = "Resultat af installation";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter er installeret.";
-"SqueezeCenter install failed.\n" = "Installationen af SqueezeCenter mislykkedes.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Du skal have OS X 10.3 eller senere for at køre SqueezeCenter.";
+"Squeezebox Server installed successfully.\n" = "Squeezebox Server er installeret.";
+"Squeezebox Server install failed.\n" = "Installationen af Squeezebox Server mislykkedes.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Du skal have OS X 10.3 eller senere for at køre Squeezebox Server.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 kræves";
