--- a/osx/Preference Pane/Installer/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/English.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Install Results";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter installed successfully.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter install failed.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "You must have OS X 10.3 or later to run SqueezeCenter.";
+"Squeezebox Server installed successfully.\n" = "Squeezebox Server installed successfully.";
+"Squeezebox Server install failed.\n" = "Squeezebox Server install failed.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "You must have OS X 10.3 or later to run Squeezebox Server.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
