--- a/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "SqueezeCenter Installer";
+CFBundleName = "Squeezebox Server Installer";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "SqueezeCenter Installer Version 7.4, Copyright 2003-2008 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
+CFBundleGetInfoString = "Squeezebox Server Installer Version 7.4, Copyright 2003-2009 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
