--- a/osx/Preference Pane/Installer/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Oppdater";
 "Install Results" = "Installeringsresultat";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter ble installert.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter ble ikke installert.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Du må ha OS X 10.3 eller nyere for å kjøre SqueezeCenter.";
+"Squeezebox Server installed successfully.\n" = "Squeezebox Server ble installert.";
+"Squeezebox Server install failed.\n" = "Squeezebox Server ble ikke installert.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Du må ha OS X 10.3 eller nyere for å kjøre Squeezebox Server.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 påkrevd";
