--- a/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "SqueezeCenter";
+CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "SqueezeCenter versjon 7.4, opphavsrett 2002–2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Server versjon 7.4, opphavsrett 2002–2009 Logitech";
 NSHumanReadableCopyright = "Opphavsrett 2002–2009 Logitech";
-NSPrefPaneIconLabel = "SqueezeCenter";
+NSPrefPaneIconLabel = "Squeezebox Server";
