--- a/osx/Preference Pane/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Start server";
 "Stop Server" = "Stopp server";
-"Start Server Description" = "Klikk på denne knappen for å starte SqueezeCenter. Spillerne får tilgang til musikkbiblioteket ditt når SqueezeCenter startes.";
-"Stop Server Description" = "Klikk på denne knappen for å stoppe SqueezeCenter. Spillerne har ikke tilgang til musikkbiblioteket ditt når SqueezeCenter er stoppet.";
+"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når Squeezebox Server startes.";
+"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Squeezebox Server er stoppet.";
 "Authorization Launch Error" = "Kunne ikke finne fastvare: filen Update Firmware.sh mangler";
 "Expired Authorization Error" = "Kunne ikke oppdatere fastvare: autorisasjonen har utløpt.";
 "Firmware version" = "Fastvareversjon %@.";
 "Firmware version invalid" = "Fastvareversjonen er ugyldig.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
