revert re-naming changes as they broke the OSX build
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26968 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -17,3 +17,6 @@
 "Not now" = "Not now";
 "Abort" = "Abort";
 "Rescan" = "Rescan";
+"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
+"Status: The server is stopped" = "Status: The server is stopped";
+"Status: The server is running" = "Status: The server is running";
