--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -1,19 +1,22 @@
 "Start Server" = "Käynnistä palvelin";
 "Stop Server" = "Pysäytä palvelin";
-"Start Server Description" = "Käynnistä Squeezebox Server tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
-"Stop Server Description" = "Sulje Squeezebox Server tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
+"Start Server Description" = "Käynnistä SqueezeCenter tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
+"Stop Server Description" = "Sulje SqueezeCenter tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
 "Authorization Launch Error" = "Laiteohjelmistoa ei voida päivittää: tiedosto Update Firmware.sh puuttuu.";
 "Expired Authorization Error" = "Laiteohjelmistoa ei voida päivittää: valtuutus vanhentunut.";
 "Firmware version" = "Laiteohjelmistoversio %@.";
 "Firmware version invalid" = "Väärä laiteohjelmistoversio.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
+"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
+"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
+"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
 "Abort" = "Abort";
 "Rescan" = "Rescan";
+"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
+"Status: The server is stopped" = "Status: The server is stopped";
+"Status: The server is running" = "Status: The server is running";
