--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -1,19 +1,22 @@
 "Start Server" = "Server starten";
 "Stop Server" = "Server anhalten";
-"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
-"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server anzuhalten. Wenn der Server angehalten wurde, können Player nicht mehr auf Ihre Musiksammlung zugreifen.";
+"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
+"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter anzuhalten. Wenn der Server angehalten wurde, können Player nicht mehr auf Ihre Musiksammlung zugreifen.";
 "Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei Update Firmware.sh fehlt.";
 "Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung ist abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
 "Firmware version invalid" = "Ungültige Firmware-Version.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
+"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
+"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
+"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
 "Abort" = "Abort";
 "Rescan" = "Rescan";
+"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
+"Status: The server is stopped" = "Status: The server is stopped";
+"Status: The server is running" = "Status: The server is running";
