--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -1,19 +1,22 @@
 "Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik på denne knap for at starte Squeezebox Server. Når den kører, får afspillerne adgang til dit musikbibliotek.";
-"Stop Server Description" = "Klik på denne knap for at stoppe Squeezebox Server. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
+"Start Server Description" = "Klik på denne knap for at starte SqueezeCenter. Når den kører, får afspillerne adgang til dit musikbibliotek.";
+"Stop Server Description" = "Klik på denne knap for at stoppe SqueezeCenter. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
 "Authorization Launch Error" = "Firmwaren kunne ikke opdateres: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Firmwaren kunne ikke opdateres: godkendelsen er udløbet.";
 "Firmware version" = "Firmwareversion %@.";
 "Firmware version invalid" = "Firmwareversionen er ugyldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
+"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
+"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
+"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
 "Abort" = "Abort";
 "Rescan" = "Rescan";
+"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
+"Status: The server is stopped" = "Status: The server is stopped";
+"Status: The server is running" = "Status: The server is running";
