--- a/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server versie 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenter versie 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "SqueezeCenter";
