--- a/osx/Preference Pane/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/German.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server Version 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenter Version 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "SqueezeCenter";
 
