--- a/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Installationsprogram til Squeezebox Server";
+CFBundleName = "Installationsprogram til SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Installationsprogram til  Squeezebox Server version 7.4. Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
+CFBundleGetInfoString = "Installationsprogram til  SqueezeCenter version 7.4. Copyright 2003-2008 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
