--- a/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Serverin asennusohjelma";
+CFBundleName = "SqueezeCenterin asennusohjelma";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Serverin asennusohjelma, versio 7.4, Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenterin asennusohjelma, versio 7.4, Copyright 2003-2008 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
