--- a/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Programme d'installation du Squeezebox Server";
+CFBundleName = "Programme d'installation du SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Programme d'installation du Squeezebox Server version 7.4, Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
+CFBundleGetInfoString = "Programme d'installation du SqueezeCenter version 7.4, Copyright 2003-2008 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
