--- a/osx/Preference Pane/Installer/Russian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Russian.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server Installer";
+CFBundleName = "SqueezeCenter Installer";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server Installer version 7.4, Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenter Installer version 7.4, Copyright 2003-2008 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
