--- a/osx/Preference Pane/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Italian.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server versione 7.4. Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenter versione 7.4. Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "SqueezeCenter";
