--- a/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server version 7.4, © 2002–2009 Logitech";
+CFBundleGetInfoString = "SqueezeCenter version 7.4, © 2002–2009 Logitech";
 NSHumanReadableCopyright = "© 2002–2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "SqueezeCenter";
