--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Start Server";
 "Stop Server" = "Stop Server";
-"Start Server Description" = "Click this button to start the SqueezeCenter. Once started, players will be able to access your music library.";
-"Stop Server Description" = "Click this button to stop the SqueezeCenter. Once stopped, players will not be able to access your music library.";
+"Start Server Description" = "Click this button to start the Squeezebox Server. Once started, players will be able to access your music library.";
+"Stop Server Description" = "Click this button to stop the Squeezebox Server. Once stopped, players will not be able to access your music library.";
 "Authorization Launch Error" = "Unable to update firmware: missing file Update Firmware.sh.";
 "Expired Authorization Error" = "Unable to update firmware: authorization expired.";
 "Firmware version" = "Firmware version %@.";
 "Firmware version invalid" = "Firmware version invalid.";
-"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
-"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
+"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
 "Check for update" = "Check for update";
 "Download update" = "Download update";
 "Install update" = "Install update";
-"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
 "Run Cleanup" = "Run Cleanup";
 "Cancel" = "Cancel";
 "Not now" = "Not now";
