--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Installatieresultaten";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter is geïnstalleerd.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter-installatie mislukt.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Je moet OS X 10.3 of hoger hebben om SqueezeCenter uit te voeren.";
+" installed successfully.\n" = " is geïnstalleerd.";
+" install failed.\n" = "-installatie mislukt.";
+"You must have OS X 10.3 or later to run .\n" = "Je moet OS X 10.3 of hoger hebben om  uit te voeren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 vereist";
