--- a/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Programma di installazione di SqueezeCenter";
+CFBundleName = "Programma di installazione di Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Programma di installazione di SqueezeCenter versione 7.4. Copyright 2003-2008 Logitech";
+CFBundleGetInfoString = "Programma di installazione di Squeezebox Server versione 7.4. Copyright 2003-2008 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
