--- a/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Aggiorna";
 "Install Results" = "Risultati installazione";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "Installazione di SqueezeCenter eseguita correttamente.";
-"SqueezeCenter install failed.\n" = "Installazione di SqueezeCenter non riuscita.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Per eseguire SqueezeCenter è necessario Mac OS X 10.3 o versione successiva.";
+" installed successfully.\n" = "Installazione di  eseguita correttamente.";
+" install failed.\n" = "Installazione di  non riuscita.";
+"You must have OS X 10.3 or later to run .\n" = "Per eseguire  è necessario Mac OS X 10.3 o versione successiva.";
 "Mac OS X 10.3 Required" = "È necessario Mac OS X 10.3.";
