--- a/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Install Results";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter installed successfully.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter install failed.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "You must have OS X 10.3 or later to run SqueezeCenter.";
+" installed successfully.\n" = " installed successfully.";
+" install failed.\n" = " install failed.";
+"You must have OS X 10.3 or later to run .\n" = "You must have OS X 10.3 or later to run .";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
