--- a/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Instalador de SqueezeCenter";
+CFBundleName = "Instalador de Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Instalador de SqueezeCenter versión 7.4, Copyright 2003-2008 Logitech";
+CFBundleGetInfoString = "Instalador de Squeezebox Server versión 7.4, Copyright 2003-2008 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
 
