--- a/osx/Preference Pane/Installer/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Swedish.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Uppdatering";
 "Install Results" = "Installationsresultat";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter har installerats.";
-"SqueezeCenter install failed.\n" = "Det gick inte att installera SqueezeCenter.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Du måste ha OS X 10.3 eller senare för att kunna köra SqueezeCenter.";
+" installed successfully.\n" = " har installerats.";
+" install failed.\n" = "Det gick inte att installera .";
+"You must have OS X 10.3 or later to run .\n" = "Du måste ha OS X 10.3 eller senare för att kunna köra .";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 krävs";
