wrap product name in PrefPane
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27034 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Czech.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Czech.lproj/InfoPlist.strings
@@ -4,4 +4,4 @@ CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
 CFBundleGetInfoString = "Squeezebox Server version 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "Squeezebox\nServer";
