--- a/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
 CFBundleGetInfoString = "Squeezebox Serverin versio 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "Squeezebox\nServer";
 
