--- a/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
@@ -4,4 +4,4 @@ CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
 CFBundleGetInfoString = "Squeezebox Server versjon 7.4, opphavsrett 2002–2009 Logitech";
 NSHumanReadableCopyright = "Opphavsrett 2002–2009 Logitech";
-NSPrefPaneIconLabel = "Squeezebox Server";
+NSPrefPaneIconLabel = "Squeezebox\nServer";
