get rid of rounded boxes and a few more items
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27136 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -18,5 +18,5 @@
 "Abort" = "Abort";
 "Rescan" = "Rescan";
 "Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"Status: The server is stopped" = "Status: The server is stopped";
-"Status: The server is running" = "Status: The server is running";
+"The server is stopped" = "The server is stopped";
+"The server is running" = "The server is running";
