add update notification to WHS console; fix restart button
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27158 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/WHS Add-In/SqueezeCenter/SettingsTabUserControl.resx
+++ b/win32/WHS Add-In/SqueezeCenter/SettingsTabUserControl.resx
@@ -126,6 +126,9 @@
   <metadata name="musicFolderBrowser.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>249, 17</value>
   </metadata>
+  <metadata name="updateCheckTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>500, 17</value>
+  </metadata>
   <metadata name="jsonClient.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>400, 17</value>
   </metadata>
