Bug: Weldon Description: OSX PrefPane layout tweaks
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27389 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -18,5 +18,8 @@
 "Abort" = "Abort";
 "Rescan" = "Rescan";
 "Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"The server is stopped" = "The server is stopped.";
+"The server is running" = "The server is running.";
+"Music Library Statistics" = "Music Library Statistics";
+"Music Library Name" = "Music Library Name";
+"Music Library Scan" = "Music Library Scan";
